--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ dependencies {
 
     //SwaggerHub required
     implementation('com.google.code.gson:gson:2.8.6')
-    implementation('org.threeten:threetenbp:1.5.0')
+//    implementation('org.threeten:threetenbp:1.5.0')
+    implementation 'io.swagger.parser.v3:swagger-parser:2.0.24'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
