--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,9 +17,9 @@ spring:
     show-sql: true    
     hibernate:
       ddl-auto: update      
-    properties:
-      hibernate.jdbc.batch_size: 10
-      hibernate.order_inserts: true
+#    properties:
+#      hibernate.jdbc.batch_size: 10
+#      hibernate.order_inserts: true
 #      hibernate.cache.use_second_level_cache: true
 #      hibernate.cache.use_query_cache: true        
   h2:
@@ -53,8 +53,11 @@ spring:
 
 # Logging
 logging:
-  level: INFO
-logging.level.org.springframework: INFO
+#  level: INFO
+#  level.org.springframework: INFO
+  level.org.hibernate.SQL: DEBUG
+  level.org.hibernate.type: TRACE
+
 # logging.level.org.springframework.web: DEBUG
 # logging.level.org.springframework.context.annotation: TRACE
 
