--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 //    implementation('org.threeten:threetenbp:1.5.0')
     implementation 'io.swagger.parser.v3:swagger-parser:2.0.24'
 
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation("javax.cache:cache-api")
