--- a/build.gradle
+++ b/build.gradle
@@ -54,34 +54,46 @@ configurations {
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+
     implementation("org.springframework.boot:spring-boot-starter-actuator")
-    implementation("org.springframework.boot:spring-boot-starter-data-mongodb-reactive")
+
+    //Mongo DB related
+    implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive',
+            'org.springframework.boot:spring-boot-starter-data-mongodb-reactive',
+//            'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0',
+//            'cz.jirutka.spring:embedmongo-spring:1.3.1'
+    );
+
+    //Used for the reactive client for swagger hub calls
+    implementation('org.springframework.boot:spring-boot-starter-webflux')
+
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
 //    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-    implementation('org.springframework.boot:spring-boot-starter-webflux')
-    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
-    implementation("org.springframework.boot:spring-boot-starter-cache")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation("org.springframework.boot:spring-boot-starter-validation")
+//    implementation("org.springframework.boot:spring-boot-starter-cache")
+//    implementation("org.springframework.boot:spring-boot-starter-validation")
 
     //SwaggerHub required
-    implementation('com.google.code.gson:gson:2.8.6')
-//    implementation('org.threeten:threetenbp:1.5.0')
-    implementation 'io.swagger.parser.v3:swagger-parser:2.0.24'
+    implementation('com.google.code.gson:gson:2.8.6',
+            'io.swagger.parser.v3:swagger-parser:2.0.24');
 
+    //Lombok required
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation("javax.cache:cache-api")
+//    implementation("javax.cache:cache-api")
 
-    implementation("org.webjars:webjars-locator-core")
+    //Front-end
+    implementation('org.webjars:webjars-locator-core',
+            'org.webjars:jquery:2.2.4',
+            'org.webjars:jquery-ui:1.11.4',
+            'org.webjars:bootstrap:4.6.0');
 
-    implementation("org.webjars:jquery:2.2.4")
-    implementation("org.webjars:jquery-ui:1.11.4")
-    implementation("org.webjars:bootstrap:4.6.0")
+    //Testing required
 
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testImplementation('org.springframework.boot:spring-boot-starter-test',
+            'org.junit.jupiter:junit-jupiter-api',
+            'io.projectreactor:reactor-test');
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
 
 //    testImplementation 'org.springframework.security:spring-security-test'
@@ -89,14 +101,14 @@ dependencies {
 //    testImplementation 'org.testcontainers:junit-jupiter'
 //    testImplementation 'org.mock-server:mockserver-junit-jupiter:5.11.1'
 
-    testImplementation (
+    testImplementation(
             'org.springframework.boot:spring-boot-starter-test',
 //            'com.squareup.okhttp3:okhttp:4.0.1',
 //            'com.squareup.okhttp3:mockwebserver:4.0.1',
             'org.assertj:assertj-core:3.19.0'
     )
 
-    runtimeOnly("com.h2database:h2")
+//    runtimeOnly("com.h2database:h2")
 
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
